--- a/page.html
+++ b/page.html
@@ -10,13 +10,27 @@
   </head>
   <body>
     <header>
-      <h1>Hello world!</h1>
+      <h1>Шапка</h1>
     </header>
     <main>
-      <h1>Hello world!</h1>
+      <h1>Основное содержание</h1>
+      <section>
+        <aside>
+          <h3>Боковая панель с чем-нибудь</h3>
+        </aside>
+        <h3>Смысловой раздел с описанием</h3>
+      </section>
+      <figure>
+        <h3>
+          Раздел с какими-нибудь фотками
+        </h3>
+      </figure>
+      <article>
+        <h3>Какая-нибудь статейка "бла бла"</h3>
+      </article>
     </main>
     <footer>
-      <h1>Hello world!</h1>
+      <h1>Подвал сайта</h1>
     </footer>
   </body>
 </html>
