--- a/page.html
+++ b/page.html
@@ -7,6 +7,8 @@
     content="Презентация продукции компании 'Пестовы Entertainment'">
     <title>Вина "Пестовы Entertainment"</title>
     <link href="page.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
+    rel="stylesheet">
   </head>
   <body>
     <header>
