--- a/page.html
+++ b/page.html
@@ -6,9 +6,8 @@
     <meta name="description"
     content="Презентация продукции компании 'Пестовы Entertainment'">
     <title>Вина "Пестовы Entertainment"</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <link href="page.css" rel="stylesheet">
-    rel="stylesheet">
   </head>
   <body>
     <header>
