--- a/page.html
+++ b/page.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta name="keywords" content="вино, экология, лимончелла">
     <meta name="description"
-    content="Презентация продукции компании 'Пестовы Entertainment'">
+    content="Презентация продукции компании 'Пестовы Entertainment">
     <title>Вина "Пестовы Entertainment"</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <link href="page.css" rel="stylesheet">
   </head>
   <body>
