--- a/page.html
+++ b/page.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="вино, экология, лимончелла">
     <meta name="description"
-    content="Презентация продукции компании 'Пестовы Entertainment">
+    content="Презентация продукции компании 'Пестовы Entertainment'">
     <title>Вина "Пестовы Entertainment"</title>
     <link href="page.css" rel="stylesheet">
   </head>
@@ -12,12 +12,12 @@
     <header>
       <h1>Шапка</h1>
     </header>
+    <aside>
+      <h3>Боковая панель с чем-нибудь</h3>
+    </aside>
     <main>
-      <h1>Основное содержание</h1>
+      <h2>Основное содержание</h2>
       <section>
-        <aside>
-          <h3>Боковая панель с чем-нибудь</h3>
-        </aside>
         <h3>Смысловой раздел с описанием</h3>
       </section>
       <figure>
@@ -30,7 +30,7 @@
       </article>
     </main>
     <footer>
-      <h1>Подвал сайта</h1>
+      <h2>Подвал сайта</h2>
     </footer>
   </body>
 </html>
