--- a/page.html
+++ b/page.html
@@ -10,11 +10,12 @@
   </head>
   <body>
     <header>
-      <h1>Шапка</h1>
+      <div class="item">"Вина Пестовы"</div>
+      <div class="menu-item">Традиции</div>
+      <div class="menu-item">Вкус</div>
+      <div class="menu-item">Качество</div>
+      <div class="menu-item">Престиж</div>
     </header>
-    <aside>
-      <h3>Боковая панель с чем-нибудь</h3>
-    </aside>
     <main>
       <h2>Основное содержание</h2>
       <section>
@@ -30,7 +31,21 @@
       </article>
     </main>
     <footer>
-      <h2>Подвал сайта</h2>
+      <div class="block">Телефоны:
+        <ul>
+          <li>225-687-13</li>
+          <li>34-11-25</li>
+          <li>12-52-18</li>
+        </ul>
+      </div>
+      <div class="block">Почта:
+        <ul>
+          <li>pestovy@i-net.ru</li>
+          <li>kirov-vines@i-net.ru</li>
+        </ul>
+      </div>
+      <div class="block social">Социальные сети:</div>
+      <div class="block">Прочее:</div>
     </footer>
   </body>
 </html>
